--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
-    "expo": "~50.0.17",
+    "expo": "^52.0.37",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
